# orca_ui

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  LICENSE.txt  NOTICE.txt  README.md  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker-publish.yml
base/: device.json  deviceDetails.json  interfaceDetails.json  portchannel.json
device/: __init__.py  admin.py  models.py  serializers.py  views.py
device/migrations/: 0001_initial.py  0002_device.py
device_ui/: package-lock.json  package.json
device_ui/src/components/: ConfirmRemovalModal.js  DeviceList.js  Header.js  Home.js  NewDeviceForm.js  NewDeviceModal.js
device_ui/src/constants/: index.js
orca_ui/: asgi.py  settings.py  urls.py  wsgi.py
public/: index.html
src/: App.js  App.scss  LogContext.js  backend_rest_urls.js  datatablesourse.js  index.js  interceptor.js
src/components/: PortChannelForm.jsx  VlanForm.jsx
src/components/bgpTable/: bgpTable.jsx  bgpTable.scss
src/components/d3Graph/: chartContainer.jsx  temp.js
src/components/datatable/: Datatable.jsx  datatable.scss
src/components/discovery_btn/: Discovery_btn.jsx
src/components/graph/: CustomGraph.jsx
src/components/interfaceDataTable/: InterfaceDataTable.scss  interfaceDataTable.jsx
src/components/logpane/: logpane.jsx  (+1 more)
src/constants/: index.js
src/utils/: NavigationService.js  auth.js  backend_rest_urls.js  common.js  configStore.js  dissableConfigContext.js  dissableTableContext.js  interceptor.js  logpannelContext.js  pointerStore.js  requiredAuth.js  store.js
(+111 files in other folders)
